--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>Inicia sesión en tu cuenta</p>
         </div>
 
-        <form action="panel.html">
+        <form action="dashboard.html">
             <div class="form-group">
                 <label for="email">Correo electrónico</label>
                 <input type="email" id="email">
