--- a/panel_cards.html
+++ b/panel_cards.html
@@ -27,7 +27,7 @@
             </div>
             <ul class="mobile-menu-items">
                 <li>
-                    <a class="active" href="panel.html">
+                    <a class="active" href="usuarios.html">
                         <i class='bx bx-group'></i>
                         <span>Usuarios</span>
                     </a>
@@ -72,7 +72,7 @@
         </div>
         <ul class="nav-list">
             <li>
-                <a class="active" href="panel.html">
+                <a class="active" href="usuarios.html">
                     <i class='bx bx-group'></i>
                     <span class="links_name">Usuarios</span>
                 </a>
@@ -112,7 +112,7 @@
     </div>
     <section class="home-section">
         <div class="text">Usuarios - Estilo Tarjetas</div>
-        
+
         <div class="cards-container">
             <div class="user-card">
                 <div class="user-card-header">
