--- a/usuarios.html
+++ b/usuarios.html
@@ -27,7 +27,7 @@
             </div>
             <ul class="mobile-menu-items">
                 <li>
-                    <a class="active" href="panel.html">
+                    <a class="active" href="usuarios.html">
                         <i class='bx bx-group'></i>
                         <span>Usuarios</span>
                     </a>
@@ -48,6 +48,12 @@
                     <a href="registros.html">
                         <i class='bx bx-book-alt'></i>
                         <span>Registros</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="dashboard.html">
+                        <i class='bx bx-line-chart'></i>
+                        <span>Dashboard</span>
                     </a>
                 </li>
             </ul>
@@ -72,7 +78,7 @@
         </div>
         <ul class="nav-list">
             <li>
-                <a class="active" href="panel.html">
+                <a class="active" href="usuarios.html">
                     <i class='bx bx-group'></i>
                     <span class="links_name">Usuarios</span>
                 </a>
@@ -98,6 +104,14 @@
                     <span class="links_name">Registros</span>
                 </a>
                 <span class="tooltip">Registros</span>
+            </li>
+            <li>
+                <a href="dashboard.html">
+                    <i class='bx bx-line-chart'></i>
+                    <span class="links_name">Dashboard</span>
+                </a>
+                <span class="tooltip">Dashboard</span>
+            </li>
             <li class="profile">
                 <div class="profile-details">
                     <img src="profile.jpg" alt="profileImg">
@@ -111,7 +125,12 @@
         </ul>
     </div>
     <section class="home-section">
-        <div class="text">Usuarios</div>
+        <div class="header-container">
+            <div class="text">Usuarios</div>
+            <button class="menu-toggle-btn" id="menu-toggle">
+                <i class='bx bx-menu'></i>
+            </button>
+        </div>
 
         <div class="accordion-container">
             <div class="accordion-filters">
