--- a/dashboard.html
+++ b/dashboard.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="dashboard.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
-    <!-- Chart.js para gráficos -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -27,6 +25,12 @@
                 </button>
             </div>
             <ul class="mobile-menu-items">
+                <li>
+                    <a class="active" href="dashboard.html">
+                        <i class='bx bx-line-chart'></i>
+                        <span>Dashboard</span>
+                    </a>
+                </li>
                 <li>
                     <a href="usuarios.html">
                         <i class='bx bx-group'></i>
@@ -51,12 +55,6 @@
                         <span>Registros</span>
                     </a>
                 </li>
-                <li>
-                    <a class="active" href="dashboard.html">
-                        <i class='bx bx-line-chart'></i>
-                        <span>Dashboard</span>
-                    </a>
-                </li>
             </ul>
             <div class="mobile-menu-footer">
                 <div class="mobile-user-info">
@@ -78,6 +76,13 @@
             <i class='bx bx-menu' id="btn"></i>
         </div>
         <ul class="nav-list">
+            <li>
+                <a class="active" href="dashboard.html">
+                    <i class='bx bx-line-chart'></i>
+                    <span class="links_name">Dashboard</span>
+                </a>
+                <span class="tooltip">Dashboard</span>
+            </li>
             <li>
                 <a href="usuarios.html">
                     <i class='bx bx-group'></i>
@@ -106,13 +111,6 @@
                 </a>
                 <span class="tooltip">Registros</span>
             </li>
-            <li>
-                <a class="active" href="dashboard.html">
-                    <i class='bx bx-line-chart'></i>
-                    <span class="links_name">Dashboard</span>
-                </a>
-                <span class="tooltip">Dashboard</span>
-            </li>
             <li class="profile">
                 <div class="profile-details">
                     <img src="profile.jpg" alt="profileImg">
@@ -138,42 +136,42 @@
             <!-- Fila superior de tarjetas de estadísticas -->
             <div class="stats-cards">
                 <div class="stat-card">
-                    <div class="stat-icon users-icon">
-                        <i class='bx bx-user'></i>
+                    <div class="stat-icon">
+                        <i class='bx bx-door-open'></i>
                     </div>
                     <div class="stat-info">
-                        <h3>Total Usuarios</h3>
-                        <p class="stat-number">248</p>
-                        <p class="stat-change positive"><i class='bx bx-up-arrow-alt'></i> 12% este mes</p>
+                        <h3>Accesos Hoy</h3>
+                        <p class="stat-number">124</p>
+                        <p class="stat-change positive"><i class='bx bx-up-arrow-alt'></i> 8% vs. ayer</p>
                     </div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon students-icon">
-                        <i class='bx bx-user-pin'></i>
+                    <div class="stat-icon">
+                        <i class='bx bx-time'></i>
                     </div>
                     <div class="stat-info">
-                        <h3>Estudiantes Activos</h3>
-                        <p class="stat-number">186</p>
-                        <p class="stat-change positive"><i class='bx bx-up-arrow-alt'></i> 8% este mes</p>
+                        <h3>Hora Pico</h3>
+                        <p class="stat-number">7:30 AM</p>
+                        <p class="stat-change">45 accesos</p>
                     </div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon cards-icon">
+                    <div class="stat-icon">
                         <i class='bx bx-credit-card'></i>
                     </div>
                     <div class="stat-info">
-                        <h3>Tarjetas Emitidas</h3>
+                        <h3>Tarjetas Activas</h3>
                         <p class="stat-number">215</p>
-                        <p class="stat-change positive"><i class='bx bx-up-arrow-alt'></i> 15% este mes</p>
+                        <p class="stat-change positive"><i class='bx bx-up-arrow-alt'></i> 5 nuevas este mes</p>
                     </div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-icon records-icon">
-                        <i class='bx bx-book-alt'></i>
+                    <div class="stat-icon">
+                        <i class='bx bx-error-circle'></i>
                     </div>
                     <div class="stat-info">
-                        <h3>Registros Diarios</h3>
-                        <p class="stat-number">124</p>
+                        <h3>Accesos Denegados</h3>
+                        <p class="stat-number">12</p>
                         <p class="stat-change negative"><i class='bx bx-down-arrow-alt'></i> 3% este mes</p>
                     </div>
                 </div>
@@ -279,30 +277,108 @@
     </section>
 
     <script src="menu.js"></script>
+    <!-- Chart.js para gráficos -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         // Inicializar los gráficos cuando el DOM esté cargado
         document.addEventListener('DOMContentLoaded', function () {
-            // Gráfico de usuarios por mes
+            // Gráfico de accesos diarios
             const usersCtx = document.getElementById('usersChart').getContext('2d');
             const usersChart = new Chart(usersCtx, {
                 type: 'line',
                 data: {
-                    labels: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun', 'Jul', 'Ago', 'Sep', 'Oct', 'Nov', 'Dic'],
+                    labels: ['7:00', '7:30', '8:00', '8:30', '9:00', '9:30', '10:00', '10:30', '11:00', '11:30', '12:00', '12:30', '13:00', '13:30', '14:00', '14:30', '15:00', '15:30', '16:00', '16:30', '17:00', '17:30', '18:00', '18:30', '19:00'],
                     datasets: [{
-                        label: 'Nuevos Usuarios',
-                        data: [12, 19, 15, 17, 22, 25, 32, 38, 42, 45, 48, 52],
-                        backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                        borderColor: 'rgba(54, 162, 235, 1)',
-                        borderWidth: 2,
-                        tension: 0.4
+                        label: 'Entradas',
+                        data: [5, 45, 12, 3, 35, 8, 2, 30, 5, 2, 40, 10, 3, 38, 6, 2, 25, 4, 1, 15, 3, 1, 10, 2, 0],
+                        backgroundColor: 'rgba(52, 152, 219, 0.2)',
+                        borderColor: '#3498db',
+                        borderWidth: 3,
+                        tension: 0.4,
+                        pointRadius: 4,
+                        pointHoverRadius: 6,
+                        pointBackgroundColor: '#3498db',
+                        pointBorderColor: '#3498db',
+                        pointBorderWidth: 0,
+                        fill: true
+                    }, {
+                        label: 'Salidas',
+                        data: [0, 2, 8, 42, 5, 30, 10, 3, 28, 8, 4, 35, 12, 5, 32, 10, 3, 22, 8, 2, 12, 5, 3, 8, 15],
+                        backgroundColor: 'rgba(155, 89, 182, 0.2)',
+                        borderColor: '#9b59b6',
+                        borderWidth: 3,
+                        tension: 0.4,
+                        pointRadius: 4,
+                        pointHoverRadius: 6,
+                        pointBackgroundColor: '#9b59b6',
+                        pointBorderColor: '#9b59b6',
+                        pointBorderWidth: 0,
+                        fill: true
+                    }, {
+                        label: 'Accesos Denegados',
+                        data: [1, 3, 1, 0, 2, 1, 0, 2, 1, 0, 3, 1, 0, 2, 1, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0],
+                        backgroundColor: 'rgba(231, 76, 60, 0.2)',
+                        borderColor: '#e74c3c',
+                        borderWidth: 3,
+                        tension: 0.4,
+                        pointRadius: 4,
+                        pointHoverRadius: 6,
+                        pointBackgroundColor: '#e74c3c',
+                        pointBorderColor: '#e74c3c',
+                        pointBorderWidth: 0,
+                        fill: true
                     }]
                 },
                 options: {
                     responsive: true,
                     maintainAspectRatio: false,
+                    interaction: {
+                        intersect: false,
+                        mode: 'index'
+                    },
+                    plugins: {
+                        legend: {
+                            position: 'top',
+                            labels: {
+                                usePointStyle: true,
+                                padding: 15,
+                                font: {
+                                    size: 12,
+                                    family: "'Poppins', sans-serif"
+                                }
+                            }
+                        },
+                        tooltip: {
+                            backgroundColor: 'rgba(0, 0, 0, 0.7)',
+                            titleColor: '#ffffff',
+                            bodyColor: '#ffffff',
+                            borderColor: 'rgba(255, 255, 255, 0.2)',
+                            borderWidth: 1,
+                            cornerRadius: 8,
+                            boxPadding: 6,
+                            usePointStyle: true,
+                            titleFont: {
+                                size: 14,
+                                weight: 'bold',
+                                family: "'Poppins', sans-serif"
+                            },
+                            bodyFont: {
+                                size: 12,
+                                family: "'Poppins', sans-serif"
+                            }
+                        }
+                    },
                     scales: {
+                        x: {
+                            grid: {
+                                display: false
+                            }
+                        },
                         y: {
-                            beginAtZero: true
+                            beginAtZero: true,
+                            grid: {
+                                color: 'rgba(200, 200, 200, 0.2)'
+                            }
                         }
                     }
                 }
