--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Login</title>
 </head>
 
-<body>
+<body class="login-page">
     <div class="login-container">
         <div class="login-header">
             <h1>Bienvenido</h1>
