--- a/registros.html
+++ b/registros.html
@@ -5,8 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Registros</title>
-    <link rel="stylesheet" href="panel.css">
-    <link rel="stylesheet" href="panel_acordeon.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
