--- a/src/active-users-demo.html
+++ b/src/active-users-demo.html
@@ -4,21 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo - Estadísticas de Usuarios Activos</title>
+    <link rel="stylesheet" href="css/index.css">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
-        :root {
-            --indigo-color: #292d6b;
-            --indigo-light: rgba(41, 45, 107, 0.1);
-            --indigo-medium: rgba(41, 45, 107, 0.5);
-        }
-        
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Poppins", sans-serif;
-        }
         
         body {
             background-color: #f5f5f5;
