--- a/tarjetas.html
+++ b/tarjetas.html
@@ -5,8 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tarjetas</title>
-    <link rel="stylesheet" href="panel.css">
-    <link rel="stylesheet" href="panel_acordeon.css">
+    <link rel="stylesheet" href="css/index.css">
     <!-- Boxicons CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -144,6 +143,7 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">Carlos Rodríguez</span>
+                            <span class="user-ci">25.789.432</span>
                         </div>
                         <div class="accordion-actions">
                             <div class="status-container status-active-container"
@@ -183,6 +183,7 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">María González</span>
+                            <span class="user-ci">26.543.218</span>
                         </div>
                         <div class="accordion-actions">
                             <div class="status-container status-active-container"
@@ -222,6 +223,7 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">José Pérez</span>
+                            <span class="user-ci">28.123.456</span>
                         </div>
                         <div class="accordion-actions">
                             <div class="status-container status-inactive-container"
@@ -261,6 +263,7 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">Laura Díaz</span>
+                            <span class="user-ci">29.876.543</span>
                         </div>
                         <div class="accordion-actions">
                             <div class="status-container status-active-container"
@@ -300,12 +303,12 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">Andrés Martínez</span>
+                            <span class="user-ci">30.034.068</span>
                         </div>
                         <div class="accordion-actions">
-                            <div class="status-container status-active-container"
-                                title="Esta tarjeta está activa y puede ser utilizada">
-                                <span class="status-indicator status-active"></span>
-                                <span>Activa</span>
+                            <div class="status-container status-pending-container" title="El estudiante tiene un pago pendiente pero aún puede acceder por tiempo limitado">
+                                <span class="status-indicator status-pending"></span>
+                                <span>Pago Pendiente</span>
                             </div>
                             <button class="accordion-edit-btn" title="Editar tarjeta"><i
                                     class='bx bx-pencil'></i></button>
@@ -325,7 +328,7 @@
                             </div>
                             <div class="user-data-item">
                                 <div class="data-label">Estado:</div>
-                                <div class="data-value">Activa</div>
+                                <div class="data-value">Pago Pendiente</div>
                             </div>
                             <div class="user-data-item">
                                 <div class="data-label">Fecha de Emisión:</div>
