--- a/index.html
+++ b/index.html
@@ -5,35 +5,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
-    <title>Login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <title>Acceso al Sistema Universitario</title>
 </head>
 
 <body class="login-page">
-    <div class="login-container">
-        <div class="login-header">
-            <h1>Bienvenido</h1>
-            <p>Inicia sesión en tu cuenta</p>
+    <div class="login-wrapper">
+        <div class="login-container">
+            <div class="login-left">
+                <div class="university-logo">
+                    <img src="img/logo.png" alt="Logo">
+                    <p class="tagline">Sistema de Control de Acceso</p>
+                </div>
+            </div>
+            <div class="login-right">
+                <div class="login-header">
+                    <h1>Bienvenido</h1>
+                    <p>Inicia sesión en tu cuenta institucional</p>
+                </div>
+
+                <form action="dashboard.html">
+                    <div class="form-group">
+                        <label for="username">Usuario</label>
+                        <div class="input-with-icon">
+                            <i class="fas fa-user"></i>
+                            <input type="text" id="username" placeholder="Ingrese su usuario" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password">Contraseña</label>
+                        <div class="input-with-icon">
+                            <i class="fas fa-lock"></i>
+                            <input type="password" id="password" placeholder="Ingrese su contraseña" required>
+                        </div>
+                    </div>
+
+                    <div class="remember-forgot">
+                        <div class="remember-me">
+                            <input type="checkbox" id="remember">
+                            <label for="remember">Recordarme</label>
+                        </div>
+                        <a href="" class="forgot-password">¿Olvidaste tu contraseña?</a>
+                    </div>
+
+                    <button type="submit" class="login-button">Iniciar Sesión</button>
+                </form>
+
+                <div class="login-footer">
+                    <p>© 2025 Sistema Universitario de Control de Acceso</p>
+                </div>
+            </div>
         </div>
-
-        <form action="dashboard.html">
-            <div class="form-group">
-                <label for="email">Correo electrónico</label>
-                <input type="email" id="email">
-            </div>
-
-            <div class="form-group">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password">
-            </div>
-
-            <div class="remember-forgot">
-                <a href="" class="forgot-password">¿Olvidaste tu contraseña?</a>
-            </div>
-
-            <button type="submit" class="login-button">Iniciar Sesión</button>
-        </form>
-
-        <!-- Registration link removed -->
     </div>
 </body>
 
