Cambio de estilo, carga de datos “Ocupa toda la pantalla”

--- a/estudiantes.html
+++ b/estudiantes.html
@@ -132,7 +132,8 @@
             </button>
         </div>
 
-        <div class="accordion-container">
+        <div style="padding: var(--spacing-lg);">
+            <div class="accordion-container">
             <!-- Barra de búsqueda y filtros avanzados -->
             <div class="search-container">
                 <div class="search-input-wrapper">
