--- a/tarjetas.html
+++ b/tarjetas.html
@@ -143,7 +143,7 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">Carlos Rodríguez</span>
-                            <span class="user-ci">25.789.432</span>
+                            <span class="user-date">25.789.432</span>
                         </div>
                         <div class="accordion-actions">
                             <div class="status-container status-active-container"
@@ -183,7 +183,7 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">María González</span>
-                            <span class="user-ci">26.543.218</span>
+                            <span class="user-date">26.543.218</span>
                         </div>
                         <div class="accordion-actions">
                             <div class="status-container status-active-container"
@@ -223,7 +223,7 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">José Pérez</span>
-                            <span class="user-ci">28.123.456</span>
+                            <span class="user-date">28.123.456</span>
                         </div>
                         <div class="accordion-actions">
                             <div class="status-container status-inactive-container"
@@ -263,7 +263,7 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">Laura Díaz</span>
-                            <span class="user-ci">29.876.543</span>
+                            <span class="user-date">29.876.543</span>
                         </div>
                         <div class="accordion-actions">
                             <div class="status-container status-active-container"
@@ -303,7 +303,7 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">Andrés Martínez</span>
-                            <span class="user-ci">30.034.068</span>
+                            <span class="user-date">30.034.068</span>
                         </div>
                         <div class="accordion-actions">
                             <div class="status-container status-pending-container" title="El estudiante tiene un pago pendiente pero aún puede acceder por tiempo limitado">
