--- a/registros.html
+++ b/registros.html
@@ -178,9 +178,13 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">Carlos Rodríguez</span>
-                            <span class="access-type entrada">Entrada: 09:15 AM</span>
+                            <span class="user-date">Entrada: 09:15 AM</span>
                         </div>
                         <div class="accordion-actions">
+                            <div class="status-container status-entrada-container" title="Registro de entrada al instituto">
+                                <span class="status-indicator status-entrada"></span>
+                                <span>Entrada</span>
+                            </div>
                             <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
                         </div>
                     </div>
@@ -210,9 +214,13 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">María González</span>
+                            <span class="user-date">Denegado: 10:30 AM</span>
                         </div>
                         <div class="accordion-actions">
-                            <button class="accordion-edit-btn"><i class='bx bx-pencil'></i></button>
+                            <div class="status-container status-denegado-container" title="Acceso denegado por falta de pago">
+                                <span class="status-indicator status-denegado"></span>
+                                <span>Denegado</span>
+                            </div>
                             <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
                         </div>
                     </div>
@@ -246,9 +254,13 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">José Pérez</span>
+                            <span class="user-date">Salida: 11:45 AM</span>
                         </div>
                         <div class="accordion-actions">
-                            <button class="accordion-edit-btn"><i class='bx bx-pencil'></i></button>
+                            <div class="status-container status-salida-container" title="Registro de salida del instituto">
+                                <span class="status-indicator status-salida"></span>
+                                <span>Salida</span>
+                            </div>
                             <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
                         </div>
                     </div>
@@ -278,9 +290,13 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">Laura Díaz</span>
+                            <span class="user-date">Entrada: 08:30 AM</span>
                         </div>
                         <div class="accordion-actions">
-                            <button class="accordion-edit-btn"><i class='bx bx-pencil'></i></button>
+                            <div class="status-container status-entrada-container" title="Registro de entrada al instituto">
+                                <span class="status-indicator status-entrada"></span>
+                                <span>Entrada</span>
+                            </div>
                             <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
                         </div>
                     </div>
@@ -310,9 +326,13 @@
                     <div class="accordion-header">
                         <div class="accordion-title">
                             <span class="user-name">Andrés Martínez</span>
+                            <span class="user-date">Denegado: 13:15 PM</span>
                         </div>
                         <div class="accordion-actions">
-                            <button class="accordion-edit-btn"><i class='bx bx-pencil'></i></button>
+                            <div class="status-container status-denegado-container" title="Acceso denegado por falta de pago">
+                                <span class="status-indicator status-denegado"></span>
+                                <span>Denegado</span>
+                            </div>
                             <button class="accordion-toggle"><i class='bx bx-chevron-down'></i></button>
                         </div>
                     </div>
